fix overlap size and pointer on cta

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,6 +112,7 @@ body{
     justify-content: center;
     align-items: center;
     align-self: center;
+    cursor: pointer;
   }
 
   .cta a {
@@ -475,7 +476,7 @@ body{
 		width: 0%;
 		overflow-y: auto;
 		opacity: 0;
-		height: calc(100vh - 146px);
+		height: calc(100vh - 130px);
 		transition: all 0.4s ease-out;
   }
 
